added connect wallet missing input indicators

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div>
 			<!-- <i class="far fa-copy" onclick="myScript"></i> -->
 			<i id="walletCopy" class="far fa-copy"></i>
-			<input type="text" disabled id="walletAddress" title="connect wallet address" placeholder="connect wallet">
+			<input type="text" readonly id="walletAddress" title="connect wallet address" placeholder="connect wallet">
 		</div>
 	</div>
 
