--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 	
 	<header class="header">
-		<h1>Worldcoin Tester</h1>
+		<h1>World ID Tester</h1>
 	</header>
 
 	<div id="subHeaderContainer">
